--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "npm run build && node dist/index.js",
+    "dev": "npm run build-dev && node dist/index.js",
+    "build-dev": "npx prisma generate && tsc",
+    "build": "npx prisma generate && tsc",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +16,11 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.16.1",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.0",
     "prisma": "^6.16.1",
