--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,18 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.16.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.0",
     "prisma": "^6.16.1",
     "ts-node": "^10.9.2",
